--- a/examples/findScrollContainer.html
+++ b/examples/findScrollContainer.html
@@ -30,22 +30,22 @@
     <div class="row-container">
       <div class="row">
         <div class="container">
-          <div class="content"></div>
+          <div class="content" id="no-scroller"></div>
         </div>
       </div>
       <div class="row">
         <div class="container" style="overflow: auto">
-          <div class="content"></div>
+          <div class="content" id="auto-scroller"></div>
         </div>
       </div>
       <div class="row">
         <div class="container" style="overflow: scroll">
-          <div class="content"></div>
+          <div class="content" id="scroll-scroller"></div>
         </div>
       </div>
       <div class="row">
         <div class="container" style="overflow-x: auto; overflow-y: hidden">
-          <div class="content"></div>
+          <div class="content" id="x-scroller"></div>
         </div>
       </div>
     </div>
